Final working Dockerfile for Render

--- a/mini-plm-backend/Dockerfile
+++ b/mini-plm-backend/Dockerfile
@@ -2,13 +2,20 @@ FROM eclipse-temurin:17-jdk
 
 WORKDIR /app
 
+# Copy project files
 COPY . .
 
-# make mvnw executable (Windows → Linux fix)
-RUN chmod +x ./mvnw
+# Ensure mvnw is executable (Windows → Linux fix)
+RUN chmod +x mvnw
 
+# Build the Spring Boot jar
 RUN ./mvnw clean package -DskipTests
 
+# Copy the generated jar to a fixed name
+RUN cp target/*.jar app.jar
+
+# Expose Spring Boot port
 EXPOSE 8080
 
-CMD ["java", "-jar", "target/*.jar"]
+# Run the application
+CMD ["java", "-jar", "app.jar"]
