Secure config: remove DB credentials and ignore local profile file

--- a/mini-plm-backend/src/main/resources/application.properties
+++ b/mini-plm-backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://ep-blue-thunder-a4j7k942-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require&channelBinding=require
-spring.datasource.username=neondb_owner
-spring.datasource.password=npg_TdsyrKLFh1c4
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
